# gentrace-python

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  api.md  main.py  mypy.ini  pyproject.toml  release-please-config.json
examples/: .env.example  Makefile  README.md  anthropic_interaction.py  anthropic_simple.py  combined.py  eval.py  eval_dataset.py  eval_dataset_local_cases.py  eval_dataset_simple.py  eval_simple.py  example_interaction.py  example_traced.py  genai-semantic-conventions.py  init.py  init_manual_otel.py  init_simple.py  init_typed_example.py  init_with_custom_otel.py  init_with_instrumentation.py  init_without_otel.py  interaction.py  kwargs_typing_patterns.py  langchain_simple.py  langgraph_simple.py  minimal_default_pipeline.py  no_otel.py  openai_agents_instrumentation.py  openai_instrumentation.py  openai_simple.py  otel_wrapper_example.py  pydantic_ai_example.py  pydantic_ai_simple.py  pyproject.toml  simple_setup.py  simple_span.py  test_cases.py  test_setup_basic.py  test_setup_comprehensive.py
examples/auto_trace/: README.md  auto_trace_pipeline_example.py
examples/auto_trace/pipeline_example_app/: __init__.py  workflow.py
examples/examples/: openai-create-chat-completion.py  openai-create-completion.py  openai-create-embedding.py
examples/examples/advanced/openai/: create-chat-completion-asubmit.py  create-chat-completion-async-stream.py  create-chat-completion-async-tools-stream.py  create-chat-completion-async.py  create-chat-completion-stream.py  create-chat-completion.py  create-completion-async-stream.py  create-completion-async.py  create-completion-stream.py  create-completion.py  create-embedding-async.py  (+4 more)
examples/examples/api/: invoke.py
examples/examples/evaluation/: basic.py
examples/examples/files/: create-bytes.py  create.py  index.py  read.py  test.json
examples/examples/openai/: async-submission.py  create-chat-completion-async-stream.py  create-chat-completion.py  create-completion-async.py  create-completion.py  create-embedding-async.py  create-multiple-calls.py
examples/examples/pinecone/: delete.py  fetch.py  upsert.py  utils.py
examples/tests/: basic-python-semantics.py  test-gentrace-package.py
package/: .env.example  .openapi-generator-ignore  CHANGELOG.md  Makefile  conftest.py  pyproject.toml
package/.openapi-generator/: FILES
package/docs/models/: BooleanType.md  CreateDatasetV2.md  CreateEvaluationV2.md  CreateFeedbackV2.md  CreateMultipleTestCases.md  CreateSingleTestCase.md  DatasetV2.md  EvaluationV2.md  EvaluationV3.md  EvaluatorV2.md  ExpandedPipeline.md  ExpandedTestResult.md  ExpandedTestRun.md  FeedbackRequest.md  FeedbackResponse.md  FeedbackV2.md  FilterableMetadataInput.md  FolderV2.md  FullRun.md  LocalEvaluation.md  LocalEvaluationDebug.md  MetadataValueObject.md  Pipeline.md  PipelineRunRequest.md  PipelineRunResponse.md  PipelineV2.md  ResolvedStepRun.md  RunPath.md  RunPathSection.md  RunRequest.md  RunResponse.md  RunV2.md  SearchableStringInput.md  SearchableUnixSecondsInput.md  StepRun.md  StringType.md  TestCase.md  TestCaseV2.md  TestEvaluation.md  TestEvaluator.md  (+10 more)
package/fixtures/: __init__.py  aioresponse.py  chat_completion.py  completion.py  embedding.py  gentrace.py  multiple_create_tc.py  pipelines.py  single_create_tc.py  submit_test_run.py  test_cases.py  test_result_response.py  test_result_response_simple.py  test_sets.py  update_tc.py  vector.py
package/gentrace/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
package/gentrace/api/: __init__.py  ingestion_api.py
package/gentrace/apis/: path_to_api.py  tag_to_api.py
package/gentrace/model/: __init__.py  boolean_type.py  boolean_type.pyi  create_dataset_v2.py  create_dataset_v2.pyi  create_evaluation_v2.py  create_evaluation_v2.pyi  create_feedback_v2.py  create_feedback_v2.pyi  create_multiple_test_cases.py  create_multiple_test_cases.pyi  create_single_test_case.py  create_single_test_case.pyi  dataset_v2.py  dataset_v2.pyi  evaluation_v2.py  evaluation_v2.pyi  evaluation_v3.py  evaluation_v3.pyi  evaluator_v2.py  evaluator_v2.pyi  expanded_pipeline.py  expanded_pipeline.pyi  expanded_test_result.py  expanded_test_result.pyi  expanded_test_run.py  expanded_test_run.pyi  feedback_request.py  feedback_request.pyi  feedback_response.py  feedback_response.pyi  feedback_v2.py  feedback_v2.pyi  filterable_metadata_input.py  filterable_metadata_input.pyi  folder_v2.py  folder_v2.pyi  full_run.py  full_run.pyi  local_evaluation.py  (+61 more)
package/gentrace/models/: __init__.py  feedback_request.py  feedback_response.py  pipeline_run_request.py  pipeline_run_request_step_runs_inner.py  pipeline_run_request_step_runs_inner_provider.py  pipeline_run_request_step_runs_inner_provider_model_params_value.py  pipeline_run_response.py
package/gentrace/paths/: __init__.py
package/gentrace/providers/: __init__.py  context.py  evaluation.py  files.py  getters.py  global_creds.py  init.py  pipeline.py  pipeline_run.py  step_run.py  test_job_runner.py  utils.py
package/tests/: __init__.py  test_completion.py  test_embedding.py  test_evaluation.py  test_gentrace.py  test_gentrace_mocked.py  test_openai_chat_completion.py  test_openai_completion.py  test_openai_embedding.py  test_pinecone.py  test_usage.py  utils.py
(+398 files in other folders)
