[tool.poetry]
authors = ["Gentrace"]
description = "Example usage of the Python SDK for the Gentrace API"
name = "examples"
packages = [{include = "examples"}]
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
openai = "^0.27.4"
pinecone-client = "^2.2.1"
python = "^3.11"
python-dotenv = "^1.0.0"
gentrace = {path = "../package/dist/gentrace-0.1.0.tar.gz", develop = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
