[tool.poetry]
authors = ["Gentrace"]
description = "Python SDK for the Gentrace API"
license = "MIT"
name = "gentrace"
repository = "https://github.com/gentrace/gentrace-python"
version = "0.1.0"

[tool.poetry.dependencies]
aenum = ">=3.1.11"
mustache = "^0.1.4"
pydantic = ">=1.10.2"
python = ">=3.8.1,<4.0"
python_dateutil = ">=2.5.3"
setuptools = ">=21.0.0"
urllib3 = ">=1.25.3"
# TODO: change both provider packages back to optional for production release
openai = "^0"
pinecone-client = "^2.2.1"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"

[tool.poetry.group.typing.dependencies]
types-python-dateutil = "^2.8.19.12"
types-urllib3 = "^1.26.25.10"

[tool.poetry.extras]
all = [
  "openai",
  "pinecone-client",
]
llms = ["openai"]
vectorstores = ["pinecone-client"]

[tool.ruff]
# TODO: Figure out how to solve these by changing Mustache templates.
ignore = [
  "F401",
  "E501",
  "F841",
]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
