[tool.poetry]
authors = ["Gentrace"]
description = "Python SDK for the Gentrace API"
license = "MIT"
name = "gentrace-py"
packages = [
  {include = "gentrace"},
]
repository = "https://github.com/gentrace/gentrace-python"
version = "0.4.0"

[tool.poetry.dependencies]
aenum = ">=3.1.11"
frozendict = "^2.3.7"
pydantic = ">=1.10.2"
pystache = "^0.6.0"
python = ">=3.8.1,<4.0"
python_dateutil = ">=2.5.3"
setuptools = ">=21.0.0"
urllib3 = ">=1.25.3"
pinecone-client = {version = "^2.2.1", optional = true}
openai = {version = "^0.27.4", optional = true}

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"

[tool.poetry.group.typing.dependencies]
types-python-dateutil = "^2.8.19.12"
types-urllib3 = "^1.26.25.10"

[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0"

[tool.poetry.extras]
all = [
  "openai",
  "pinecone-client",
]
llms = ["openai"]
vectorstores = ["pinecone-client"]

[[tool.poetry.source]]
default = false
name = "testpypi"
secondary = true
url = "https://test.pypi.org/legacy/"

[tool.ruff]
# TODO: Figure out how to solve these by changing Mustache templates.
ignore = [
  "F401",
  "E501",
  "F841",
]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
